--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.js",
     "start:dist": "cross-env NODE_ENV=production webpack-dev-server --config ./config/webpack.config.js && http-server ./dist -o",
-    "setup": "node ./config/site.setup.js",
-    "postinstall": "node ./config/site.setup.js",
-    "lint:js": "./node_modules/.bin/eslint \"src/**/*.js\"",
-    "lint:styles": "stylelint \"src/**/*.scss\"",
+    "lint:js": "./node_modules/.bin/eslint \"./src/**/*.js\"",
+    "lint:styles": "stylelint \"./src/**/*.css\" \"./src/**/*.scss\" \"!./src/**/*.min.css\"",
     "build:dist": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js",
     "deploy": "node ./config/site.deploy.js"
   },
