--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "static-site-boilerplate",
-  "description": "A modern boilerplate for static website development",
-  "version": "1.1.0",
-  "homepage": "http://staticsiteboilerplate.com",
+  "name": "bootstrap-content-templates",
+  "description": "An extension for Squiz Matrix to enable Bootstrap based Content Templates.",
+  "version": "0.1.0",
+  "homepage": "https://matrix.squiz.net/",
   "author": {
-    "name": "Eric Alli",
-    "url": "http://ericalli.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ericalli/static-site-boilerplate.git"
+    "name": "Bart Banda",
+    "url": "https://matrix.squiz.net/"
   },
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ericalli/static-site-boilerplate/issues"
-  },
+  "bugs": {},
   "keywords": [
     "html5",
     "css3",
