--- a/package.json
+++ b/package.json
@@ -29,19 +29,19 @@
     "deploy": "node ./config/site.deploy.js"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "autoprefixer": "^9.7.3",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.1",
-    "css-loader": "^3.4.0",
+    "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-import": "^2.20.1",
     "file-loader": "^4.3.0",
     "glob": "^7.1.6",
     "html-loader": "^0.5.5",
@@ -51,15 +51,15 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.2",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-sass": "^0.4.2",
     "sass-loader": "^7.3.1",
-    "style-loader": "^1.1.2",
+    "style-loader": "^1.1.3",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
-    "stylelint-scss": "^3.13.0",
+    "stylelint-scss": "^3.14.2",
     "stylelint-webpack-plugin": "^0.10.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
@@ -68,15 +68,16 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "chalk": "^2.4.2",
     "clear": "^0.1.0",
-    "enquirer": "^2.3.2",
+    "enquirer": "^2.3.4",
     "figlet": "^1.2.4",
     "ftp-deploy": "^2.3.6",
     "jquery": "^3.4.1",
     "normalize.css": "^8.0.1",
     "reset-css": "^4.0.1",
     "sanitize.css": "^11.0.0",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.3"
   }
 }
